@@ -159,6 +159,16 @@ geo:location rdf:type owl:AnnotationProperty ;
 :contains rdf:type owl:ObjectProperty .
 
 
+###  http://fdri.ceh.ac.uk/vocab/metadata/deployedSystemProcedure
+:deployedSystemProcedure rdf:type owl:ObjectProperty ;
+                         rdfs:subPropertyOf owl:topObjectProperty ;
+                         rdfs:range :Procedure ;
+                         rdfs:comment """Relates a deployment to a Procedure that applies to the system deployed.
+
+E.g. the sampling regime that applies to the sensor"""@en ;
+                         rdfs:label "deployed system procedure"@en .
+
+
 ###  http://fdri.ceh.ac.uk/vocab/metadata/environmentalDomain
 :environmentalDomain rdf:type owl:ObjectProperty ;
                      rdfs:range :EnvironmentalDomain ;
@@ -975,6 +985,10 @@ A Data Processing Configuration is defined as a sub-type of `prov:Plan` allowing
                             [ rdf:type owl:Restriction ;
                               owl:onProperty ssn:deployedSystem ;
                               owl:allValuesFrom :EnvironmentalMonitoringSystem
+                            ] ,
+                            [ rdf:type owl:Restriction ;
+                              owl:onProperty :deployedSystemProcedure ;
+                              owl:minCardinality "0"^^xsd:nonNegativeInteger
                             ] ,
                             [ rdf:type owl:Restriction ;
                               owl:onProperty :dependencyNote ;
